--- a/slides/lecture01/main.tex
+++ b/slides/lecture01/main.tex
@@ -85,9 +85,9 @@
 
 \bigskip
 
-\date[Oct 2020]% (optional, should be abbreviation of conference name)
+\date[Sep 2021]% (optional, should be abbreviation of conference name)
 {\small%
-  October 2020}
+  September 2021}
 
 \begin{document}
   
@@ -118,7 +118,7 @@
     \item Multi-Robot coordination
     \item Autonomous Driving Vehicles
     \item First commercial robot vacuum cleaner
-    \item Working with Boeing, GM, Qualcomm, Robust.AI, ... 
+    \item Working with Amazon, Boeing, GM, Qualcomm, Robust.AI, \ldots
   \end{itemize}
 \end{frame} 
 
@@ -176,10 +176,14 @@
   \frametitle{Information Sources}
   \begin{itemize}
   \item CANVAS website
-  \item WebSite - http://www.hichristensen.com/CSE276C-20
+  \item WebSite - http://www.hichristensen.com/CSE276C-21
+    \begin{itemize}
+    \item Slides
+    \item Lecture notes (handwritten sorry!)
+    \end{itemize}
   \item Piazza - Did you all get an invite?
-  \item Office Hours - Henrik \& TA 
-  \item Video Lectures available from CANVAS site
+  \item Office Hours - Henrik \& TA/Quan Vuong
+%  \item Video Lectures available from CANVAS site
   \end{itemize}
 \end{frame}
 
