Householding to integrate minor edits

--- a/slides/lecture04/main.tex
+++ b/slides/lecture04/main.tex
@@ -82,7 +82,7 @@
 %%    \begin{center}
       Computer Science and Engineering\\
       University of California, San Diego\\
-      \myemph{\url{http://cri.ucsd.edu}}\\          
+      \myemph{\url{http://cri.ucsd.edu}}\\
 %%    \end{center}
 
   \end{minipage}
@@ -98,7 +98,7 @@
   October 2021}
 
 \begin{document}
-  
+
 \nobibliography{/Users/hic/Dropbox/bibliography/bib-file}
 \bibliographystyle{plain}
 
@@ -394,8 +394,9 @@
 \begin{frame}
   \frametitle{Chebyshev Polynomials}
   \begin{itemize}
-  \item The polynomial $T_N(x)$ has N zeros in the internal $[-1,1]$ at the points $x=\cos(\frac{\pi (k+\frac{1}{2})}{N})$ for $k \in 0, \ldots, N-1$
-  \item It is a similar set of extrema at $x = \cos(\frac{\pi k}{N})$
+  \item The polynomial $T_N(x)$ has N zeros in the internal $[-1,1]$ at the
+    points $x=\cos(\frac{\pi (k+\frac{1}{2})}{N})$ for $k \in 0, \ldots, N-1$
+  \item There is a similar set of extrema at $x = \cos(\frac{\pi k}{N})$
     \centerline{\includegraphics[height=4cm]{Chebyshev}}
   \end{itemize}
 \end{frame}
